Added time and date display to sidebar in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 		</div>
 		<div id="columns">
 			<div id="side">
+				<span id="display_time">The day and time is:<br><%= display_time %></span>
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Questions</a></li>
