--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 		</div>
 		<div id="columns">
 			<div id="side">
-				<span id="display_time">The day and time is:<br><%= display_time %></span>
+				<span class="notice_text">The day and time is:<br><%= display_time %></span>
+				<span class="notice_text"> and you have visited this store <%= @count %> times.</span>
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Questions</a></li>
