--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-	<p if="notice"><%= notice %></p>
+	<p id="notice"><%= notice %></p>
 <% end %>
 
 <% cache ['store', Product.latest] do %>
