Worked on the exercises at end of chapter.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 				<span class="notice_text">The day and time is:<br><%= display_time %></span>
 				<span class="notice_text"> and you have visited this store <%= @count %> times.</span>
 				<ul>
-					<li><a href="#">Home</a></li>
+					<li><%= link_to "Home", store_url %></li>
 					<li><a href="#">Questions</a></li>
 					<li><a href="#">News</a></li>
 					<li><a href="#">Contact</a></li>
