--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,10 +44,30 @@
 	}
 
 	#side {
-		float: right;
+		float: left;
 		padding: 1em 2em;
-		width: 13em;
+		width: 25em;
+		height: 500px;
 		background: #141;
+
+		form, div {
+			display: inline;
+		}
+
+		input {
+			font-size: small;
+		}
+
+		#cart {
+			font-size: smaller;
+			color: white;
+
+			table {
+				border-top: 1px dotted #595;
+				border-bottom: 1px dotted #595;
+				margin-top: 10px;
+			}
+		}
 
 		ul {
 			padding: 0;
