--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<title>Depot</title>
-		<%= stylesheet_link_tag "application", media: "all",
-		"data-turbolinks-track" => true %>
-		<%= javascript_include_tag "default", "data-turbolinks-track" => true %>
+		<%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+		<%= javascript_include_tag "application" %>
 		<%= csrf_meta_tags %>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 	</head>
 	<body class='<%= controller.controller_name %>'>
 		<div id="banner">
