--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -7,4 +7,5 @@
 	<td><%= line_item.product.title%></td>
 	<td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
 	<td><%= button_to 'Delete Item', line_item, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+	<td><%= button_to '-', decrement_line_item_path(line_item), method: :post, remote: true %></td>
 </tr>
